# research_codebase_analysis

./: MRes Codebase.ipynb  README.md  __init__.py  analysis.xlsx  batch_run.sh  main.py  pyproject.toml  repositories.xlsx  requirement.txt
codebase_analysis/: CodebaseAnalysis.py  DeterminePackages.py  ExperienceAlgorithm.py  LoadJson.py  PriorCurrentRepoExperience.py
codebase_analysis/class_structure/: AmendCommit.py  ClassStructure.py  CommitClass.py  CommitFile.py  CommitMethod.py  Developer.py  DeveloperCommit.py  DeveloperNew.py  DeveloperStart.py  ExperienceLevel.py  File.py  FileAtCommit.py  Method.py  PriorAmendCommit.py  PriorTotalCommit.py  Repository.py
codebase_analysis/population_mapping/: LocalControlPopulate.py  PopulateAmendCommit.py  PopulateClass.py  PopulateCommitClass.py  PopulateCommitFile.py  PopulateCommitMethod.py  PopulateDeveloper.py  PopulateDeveloperCommit.py  PopulateDeveloperExperience.py  PopulateDeveloperNew.py  PopulateDeveloperStart.py  PopulateExperienceLevel.py  PopulateFile.py  PopulateFileAtCommit.py  PopulateMethod.py  PopulatePriorAmendCommit.py  PopulatePriorTotalCommit.py  PopulateRepository.py
resource/: failed_database.csv
resource/analysis/: commit_method.sql  prior_method.sql
resource/config/: experience.json
resource/sql/: amend_commit.sql  class.sql  commit_class.sql  commit_experience.sql  commit_file.sql  commit_method.sql  developer.sql  developer_commit.sql  developer_new.sql  developer_start.sql  experience_level.sql  file.sql  file_at_commit.sql  method.sql  prior_amend_commit.sql  prior_total_commit.sql  repository.sql
resource/sql_maintenance/: repo_analysis.sql  repository_delete.sql
test/: test_DeterminePackages.py  test_PriorCurrentRepoExperience.py
test/class_structure/: test_Developer.py
test/population_mapping/: test_PopulateDeveloper.py  test_PopulateDeveloperCommit.py
