[project]
name = "codebase_analysis"
version = "2024.0.0"
dependencies = [
  "utility @ git+https://git.dcs.gla.ac.uk/DerekSomerville/utility",
  "class_structure @ git+https://git.dcs.gla.ac.uk/DerekSomerville/class_structure",
  "repository_save @ git+https://git.dcs.gla.ac.uk/DerekSomerville/repository_save",
]
requires-python = ">=3.9"
authors = [
  {name = "Derek Somerville", email = "derek.somerville@glasgow.ac.uk"}
]
description = "Save to a database in for the repository structure"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["read", "write", "text"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://git.dcs.gla.ac.uk/DerekSomerville/codebase_analysis.git"

[tool.setuptools]
packages = ["codebase_analysis", "codebase_analysis.class_structure", "codebase_analysis.population_mapping"]
py-modules = ["__init__"]